# tiresias

./: .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  cli.py  import_obsidian.py  list_symbols.py  pyproject.toml
actions/: audit.py  extract.py  find.py  rename.py  summarize.py  symbols.py
lib/: files.py  llm.py
