[project]
name = "tiresias"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "python-dotenv",
    "python-frontmatter",
    "click",
]

[project.scripts]
dream = "cli:dream"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actions", "lib"]
force-include = { "cli.py" = "cli.py" }
